--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="array-container"></div>
     <div id="button-bar">
         <button onClick="init()">Generate</button>
-        <button onClick="bubbleSort()">Sort</button>
+        <button onClick="bubbleSort()">Bubble Sort</button>
     </div>
 </body>
 </html>
